--- a/.github/workflows/edniustestfunction.yml
+++ b/.github/workflows/edniustestfunction.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-  AZURE_FUNCTIONAPP_NAME: 'ednius-production-function'   # set this to your production function app name on Azure
+  AZURE_FUNCTIONAPP_NAME: 'ednius-test-function'   # set this to your production function app name on Azure
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'       # set this to the path to your function app project, defaults to the repository root
   PYTHON_VERSION: '3.9'                     # set this to the python version to use (e.g. '3.6', '3.7', '3.8')
 
