--- a/.github/workflows/edniustestfunction.yml
+++ b/.github/workflows/edniustestfunction.yml
@@ -6,9 +6,8 @@ on:
       - main
 
 env:
-  AZURE_FUNCTIONAPP_NAME: 'ednius-test-function'   # set this to your production function app name on Azure
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'       # set this to the path to your function app project, defaults to the repository root
-  PYTHON_VERSION: '3.9'                     # set this to the python version to use (e.g. '3.6', '3.7', '3.8')
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'
+  PYTHON_VERSION: '3.9'
 
 jobs:
   build:
@@ -18,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Python version
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
@@ -29,8 +28,6 @@ jobs:
 
       - name: Install dependencies
         run: pip install -r requirements.txt
-
-      # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -44,28 +41,22 @@ jobs:
             !venv/
 
   deploy:
-  runs-on: ubuntu-latest
-  needs: build
-  environment:
-    name: 'Production'
-    url: ${{ steps.deploy-to-function.outputs.webapp-url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
+        with:
+          name: python-app
 
-  steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v3
-      with:
-        name: python-app
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
 
-    - name: Unzip artifact for deployment
-      run: unzip release.zip
-
-    - name: 'Deploy to Azure Functions'
-      uses: Azure/functions-action@v1
-      id: deploy-to-function
-      with:
-        app-name: 'ednius-test-function'
-        slot-name: 'Production'
-        package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
-        scm-do-build-during-deployment: true
-        enable-oryx-build: true
+      - name: 'Deploy to Azure Functions'
+        uses: Azure/functions-action@v1
+        with:
+          app-name: 'ednius-test-function'
+          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+          scm-do-build-during-deployment: true
+          enable-oryx-build: true
